--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,3 +35,4 @@ jobs:
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           healthcheck: 'https://full-stack-part-11.herokuapp.com/health'
           checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
