--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,5 @@ jobs:
         run: echo "$COMMIT_MESSAGES"
       - name: commit message 0
         env:
-          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message[0]) }}
+          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message)[0] }}
         run: echo "$COMMIT_MESSAGES"
