--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,7 +41,7 @@ jobs:
           checkstring: 'ok'
           rollbackonhealthcheckfailed: true
       - name: Discord success notification
-        if: ${{ success() && !contains(github.event.head_commit.message, '#skip') }}
+        if: ${{ success() && github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip') }}
         uses: rjstone/discord-webhook-notify@v1
         with:
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
